--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "homepage": "https://github.com/saravenpi/devhub-client#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "colors": "^1.4.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "request-promise": "^4.2.6"
   }
 }
