--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "colors": "^1.4.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
 }
